--- a/index.html
+++ b/index.html
@@ -51,6 +51,54 @@
         </div>
     </nav>
     <!-- Naveber end -->
+    <!-- Slide show section start -->
+    <section>
+        <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
+            <div class="carousel-inner container ">
+                <div class="carousel-item active ">
+                    <div class="opacity-100">
+                        <img src="edTech-website-main/images/cover/cover-1.png" class="d-block w-100" alt="...">
+                    </div>
+                    <div class="carousel-caption d-none d-md-block">
+                        <h1>Get Started Digital <br> Learning</h1>
+                        <p>A learning method based on the use of <br> new digital tools to enable learners to <br> learn in a different way.</p>
+                        <button class="text-white bg-primary p-1 px-2 border-primary rounded">Get Started</button>
+                    </div> 
+                </div>
+                <div class="carousel-item">
+                    <div class="opacity-100">
+                        <img src="edTech-website-main/images/cover/cover-2.jpg" class="d-block w-100" alt="...">
+                    </div>
+                    <div class="carousel-caption d-none d-md-block">
+                        <h1>Get Started Digital <br> Learning</h1>
+                        <p>A learning method based on the use of <br> new digital tools to enable learners to <br> learn in a different way.
+                        </p>
+                        <button class="text-white bg-primary p-1 px-2 border-primary rounded">Get Started</button>
+                    </div>
+                </div>        
+                <div class="carousel-item">
+                    <div class="opacity-100">
+                        <img src="edTech-website-main/images/cover/cover-3.jpg" class="d-block w-100" alt="...">
+                    </div>
+                    <div class="carousel-caption d-none d-md-block">
+                        <h1>Get Started Digital <br> Learning</h1>
+                        <p>A learning method based on the use of <br> new digital tools to enable learners to <br> learn in a different way.
+                        </p>
+                        <button class="text-white bg-primary p-1 px-2 border-primary rounded">Get Started</button>
+                    </div>
+                </div>
+            </div>
+            <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="prev">
+                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                <span class="visually-hidden">Previous</span>
+            </button>
+            <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="next">
+                <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                <span class="visually-hidden">Next</span>
+            </button>
+        </div>
+    </section>
+    <!-- Slide show section End-->
     <h1>Hello, world!</h1>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa"
