--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
         <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
             <div class="carousel-inner container ">
                 <div class="carousel-item active ">
-                    <div class="opacity-100">
+                    <div class="opacity-100 rounded">
                         <img src="edTech-website-main/images/cover/cover-1.png" class="d-block w-100" alt="...">
                     </div>
                     <div class="carousel-caption d-none d-md-block">
@@ -66,7 +66,7 @@
                     </div> 
                 </div>
                 <div class="carousel-item">
-                    <div class="opacity-100">
+                    <div class="opacity-100 rounded">
                         <img src="edTech-website-main/images/cover/cover-2.jpg" class="d-block w-100" alt="...">
                     </div>
                     <div class="carousel-caption d-none d-md-block">
@@ -77,7 +77,7 @@
                     </div>
                 </div>        
                 <div class="carousel-item">
-                    <div class="opacity-100">
+                    <div class="opacity-100 rounded">
                         <img src="edTech-website-main/images/cover/cover-3.jpg" class="d-block w-100" alt="...">
                     </div>
                     <div class="carousel-caption d-none d-md-block">
@@ -99,7 +99,145 @@
         </div>
     </section>
     <!-- Slide show section End-->
-    <h1>Hello, world!</h1>
+    <!-- Heading section start -->
+    <section>
+        <div class="text-center mt-5">
+            <h2>Discover our Populer <br> Courses</h2>
+            <p>Digital learning is any type of learning <br> that uses technology. It can happen across <br> all curriculum learning areas</p>
+        </div>
+    </section>
+    <!-- Heading section end -->
+    <!-- Card section start -->
+    <section class="container mt-5 ">
+        <div class="justify-content-between row gy-5 row-cols-2 ">
+            <div class="card" style="max-width: 500px;">
+                <div class="row g-0">
+                    <div class="col-sm-5">
+                        <img src="edTech-website-main/images/course/course-1.png" class="card-img-top h-100" alt="...">
+                    </div>
+                    <div class="col-sm-7">
+                        <div class="card-body">
+                            <h5 class="card-title">Fundamental of UI/UX Design</h5>
+                            <p>There are many important principles within UX design but to simplify things a bit.</p>
+                            <p class="text-primary">Price: 20$</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="card" style="max-width: 500px;">
+                <div class="row g-0">
+                    <div class="col-sm-5">
+                        <img src="edTech-website-main/images/course/course-2.png" class="card-img-top h-100" alt="...">
+                    </div>
+                    <div class="col-sm-7">
+                        <div class="card-body">
+                            <h5 class="card-title">Java script basic to advance</h5>
+                            <p>There are many important principles within UX design but to simplify things a bit.</p>
+                            <p class="text-primary">Price: 20$</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="card" style="max-width: 500px;">
+                <div class="row g-0">
+                    <div class="col-sm-5">
+                        <img src="edTech-website-main/images/course/course-3.png" class="card-img-top h-100" alt="...">
+                    </div>
+                    <div class="col-sm-7">
+                        <div class="card-body">
+                            <h5 class="card-title">Fullstack web development</h5>
+                            <p>There are many important principles within UX design but to simplify things a bit.</p>
+                            <p class="text-primary">Price: 20$</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="card" style="max-width: 500px;">
+                <div class="row g-0">
+                    <div class="col-sm-5">
+                        <img src="edTech-website-main/images/course/course-4.png" class="card-img-top h-100" alt="...">
+                    </div>
+                    <div class="col-sm-7">
+                        <div class="card-body">
+                            <h5 class="card-title">Digital marketing</h5>
+                            <p>There are many important principles within UX design but to simplify things a bit.</p>
+                            <p class="text-primary">Price: 20$</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="card" style="max-width: 500px;">
+                <div class="row g-0">
+                    <div class="col-sm-5">
+                        <img src="edTech-website-main/images/course/course-5.png" class="card-img-top h-100" alt="...">
+                    </div>
+                    <div class="col-sm-7">
+                        <div class="card-body">
+                            <h5 class="card-title">Photography basic rules</h5>
+                            <p>There are many important principles within UX design but to simplify things a bit.</p>
+                            <p class="text-primary">Price: 20$</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="card" style="max-width: 500px;">
+                <div class="row g-0">
+                    <div class="col-sm-5">
+                        <img src="edTech-website-main/images/course/course-6.png" class="card-img-top h-100" alt="...">
+                    </div>
+                    <div class="col-sm-7">
+                        <div class="card-body">
+                            <h5 class="card-title">Motion graphics</h5>
+                            <p>There are many important principles within UX design but to simplify things a bit.</p>
+                            <p class="text-primary">Price: 20$</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        
+    </section>
+    <div class="text-center">
+        <button class=" mt-5 text-white bg-primary p-1 px-2 border-primary rounded">See More Courses</button>
+    </div>
+    <!-- Card section end -->
+    <!-- course duration section start -->
+    <section class="container my-5">
+        <div class="d-flex text-center align-items-center h-50 w-75 bg-light ">
+            <div> 
+                <img src="edTech-website-main/images/working.png" alt="">
+            </div>
+            <div class="bg-light align-items-center " >
+                <h2>
+                    Exploring the Elearning Institude
+                </h2>
+                <p>
+                    Digital technologies are electronic tools, systems, devices and resources that generate, store or process data. Well
+                    known examples include social media, online games, multimedia and mobile phones.
+                </p>
+                <div class="row row-cols-3">
+                    <div >
+                        <h1>3.2K+</h1>
+                        <p>Online Courses </p>
+                    </div>
+                    <div>
+                        <h1>600+</h1>
+                        <p>Expert member</p>
+                    </div>
+                    <div>
+                        <h1>1K+</h1>
+                        <p>rating and review </p>
+                    </div>
+                </div>
+                <div class="text-center">
+                    <button class=" mt-5 text-white bg-primary p-1 px-2 border-primary rounded">Read More</button>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <!-- course duration end -->
+
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa"
         crossorigin="anonymous"></script>
