--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
                     <div class="carousel-caption d-none d-md-block">
                         <h1>Get Started Digital <br> Learning</h1>
                         <p>A learning method based on the use of <br> new digital tools to enable learners to <br> learn in a different way.</p>
-                        <button class="text-white bg-primary p-1 px-2 border-primary rounded">Get Started</button>
+                        <button class="text-white bg-primary p-1 px-2 border-0 rounded">Get Started</button>
                     </div> 
                 </div>
                 <div class="carousel-item">
@@ -73,7 +73,7 @@
                         <h1>Get Started Digital <br> Learning</h1>
                         <p>A learning method based on the use of <br> new digital tools to enable learners to <br> learn in a different way.
                         </p>
-                        <button class="text-white bg-primary p-1 px-2 border-primary rounded">Get Started</button>
+                        <button class="text-white bg-primary p-1 px-2 border-0 rounded">Get Started</button>
                     </div>
                 </div>        
                 <div class="carousel-item">
@@ -84,7 +84,7 @@
                         <h1>Get Started Digital <br> Learning</h1>
                         <p>A learning method based on the use of <br> new digital tools to enable learners to <br> learn in a different way.
                         </p>
-                        <button class="text-white bg-primary p-1 px-2 border-primary rounded">Get Started</button>
+                        <button class="text-white bg-primary p-1 px-2 border-0 rounded">Get Started</button>
                     </div>
                 </div>
             </div>
@@ -198,7 +198,7 @@
         
     </section>
     <div class="text-center">
-        <button class=" mt-5 text-white bg-primary p-1 px-2 border-primary rounded">See More Courses</button>
+        <button class=" mt-5 text-white bg-primary p-1 px-2 border-0 rounded">See More Courses</button>
     </div>
     <!-- Card section end -->
     <!-- course duration section start -->
@@ -230,13 +230,60 @@
                     </div>
                 </div>
                 <div class="text-center">
-                    <button class=" mt-5 text-white bg-primary p-1 px-2 border-primary rounded">Read More</button>
+                    <button class=" mt-5 text-white bg-primary p-1 px-2 border-0 rounded">Read More</button>
                 </div>
             </div>
         </div>
     </section>
 
     <!-- course duration end -->
+    <!-- registration-box start -->
+    <section class="container d-flex align-items-center justify-content-between my-5 p-5 pe-5 bg-primary rounded ">
+        <div class="text-white">
+            <h3>Ready to join</h3>
+            <p>Digital learning is any type of learning that  is accompanied <br> by technology or by  instructional  practice that makes <br>
+            effective use of technology.</p>
+        </div>
+        <div>
+            <button class="text-primary bg-white rounded border-0">Register Now</button>
+        </div>
+    </section>
+    <!-- registration-box end -->
+    <!-- suscess students staert -->
+    <section class="container my-5">
+        <div>
+            <h3>Meet Our Successfull students</h3>
+            <p>Digital learning is sometimes confused with online learning or e-learning; <br> digital learning encompasses the
+            aforementioned concepts.</p>
+        </div>
+        <div class="row row-cols-4 gy-5">
+            <div class="shadow-sm p-3 mb-5 bg-body rounded">
+                <img src="edTech-website-main/images/student/student-1.png" alt="">
+                <h5>Awlad Hossain</h5> 
+                <p>UI/UX Designer</p>
+            </div>
+            <div class="shadow-sm p-3 mb-5 bg-body rounded">
+                <img src="edTech-website-main/images/student/student-2.png" alt="">
+                <h5>Jannatul Ferduse</h5> 
+                <p>Motion Designer</p>
+            </div>
+            <div class="shadow-sm p-3 mb-5 bg-body rounded">
+                <img src="edTech-website-main/images/student/student-3.png" alt="">
+                <h5>Imran Hossain</h5> 
+                <p>graphics Designer</p>
+            </div>
+            <div class="shadow-sm p-3 mb-5 bg-body rounded">
+                <img src="edTech-website-main/images/student/student-4.png" alt="">
+                <h5>Nishi Akhter</h5> 
+                <p>Web Developer</p>
+            </div>
+        </div>
+        <div class="text-center">
+            <button class=" mt-5 text-white bg-primary p-1 px-3 border-0 rounded">View More</button>
+        </div>
+    </section>
+    <!-- suscess students end -->
+    
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa"
