--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <title>Bootstrap demo</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
+        <!-- font awsome kit -->
+        <script src="https://kit.fontawesome.com/457292320a.js" crossorigin="anonymous"></script>
 </head>
 
 <body>
@@ -283,7 +285,58 @@
         </div>
     </section>
     <!-- suscess students end -->
-    
+    <!-- student rating section start -->
+    <section class="container">
+        <div class="text-center my-5">
+            <h3>Some Students Feedback</h3>
+            <p>Recognizing the student's effort even though  they missed <br> the concept of an assignment.</p>
+        </div>
+        <div class="d-flex ">
+            <div class="shadow-sm p-3 mb-5 bg-body rounded">
+                <div class="d-flex justify-content-between">
+                    <img src="edTech-website-main/images/comma.png" alt="">
+                     <div class="d-flex">
+                        <p class="text-warning"><i class="fa-solid fa-star"></i></p>
+                        <p class="text-warning"><i class="fa-solid fa-star"></i></p>
+                        <p class="text-warning"><i class="fa-solid fa-star"></i></p>
+                        <p class="text-warning"><i class="fa-solid fa-star"></i></p>
+                        <p class="text-warning"><i class="fa-solid fa-star-half-stroke"></i></i></p>
+                     </div>
+                </div>
+                <p>I appreciate the hard work you've put into this paper; however, I was hoping you would have included information on the
+                benefits of physical activity.</p>
+                <div class="d-flex">
+                    <img src="edTech-website-main/images/student/student-5.png" alt="">
+                    <div class="ms-3">
+                        <h5> Awlad Hossain </h5>
+                        <p> UI designer</p>
+                    </div>
+                </div>
+            </div>
+            <div class="shadow-sm p-3 mb-5 bg-body rounded ms-3">
+                <div class="d-flex justify-content-between">
+                    <img src="edTech-website-main/images/comma.png" alt="">
+                     <div class="d-flex">
+                        <p class="text-warning"><i class="fa-solid fa-star"></i></p>
+                        <p class="text-warning"><i class="fa-solid fa-star"></i></p>
+                        <p class="text-warning"><i class="fa-solid fa-star"></i></p>
+                        <p class="text-warning"><i class="fa-solid fa-star"></i></p>
+                        <p class="text-warning"><i class="fa-solid fa-star-half-stroke"></i></i></p>
+                     </div>
+                </div>
+                <p>I appreciate the hard work you've put into this paper; however, I was hoping you would have included information on the
+                benefits of physical activity.</p>
+                <div class="d-flex">
+                    <img src="edTech-website-main/images/student/student-6.png" alt="">
+                    <div class="ms-3">
+                        <h5>Shanta Akhter </h5>
+                        <p> graphics designer</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <!-- student rating section end -->
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa"
