--- a/index.html
+++ b/index.html
@@ -337,6 +337,110 @@
         </div>
     </section>
     <!-- student rating section end -->
+    <!-- FAQ's section start -->
+    <section class="text-center container">
+        <div class="text-center my-5">
+            <h2>Freequently Ask Question</h2>
+            <p>FAQs enable you to deal with specific queries  that your customers <br> have about your business. They also represent another
+            way to <br> reach out and connect with your target audience.</p>
+        </div>
+        <div class=" mx-5 my-5 w-75">
+            <div class="accordion" id="accordionPanelsStayOpenExample">
+                <div class="accordion-item">
+                    <h2 class="accordion-header" id="panelsStayOpen-headingOne">
+                        <button class="accordion-button" type="button" data-bs-toggle="collapse"
+                            data-bs-target="#panelsStayOpen-collapseOne" aria-expanded="true"
+                            aria-controls="panelsStayOpen-collapseOne">
+                            what is the difference between flex box and grid?
+                        </button>
+                    </h2>
+                    <div id="panelsStayOpen-collapseOne" class="accordion-collapse collapse show"
+                        aria-labelledby="panelsStayOpen-headingOne">
+                        <div class="accordion-body">
+                            The basic difference between CSS Grid Layout and CSS Flexbox Layout is that flexbox was designed for layout in one
+                            dimension - either a row or a column. Grid was designed for two-dimensional layout - rows, and columns at the same time.</div>
+                    </div>
+                </div>
+                <div class="accordion-item">
+                    <h2 class="accordion-header" id="panelsStayOpen-headingTwo">
+                        <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                            data-bs-target="#panelsStayOpen-collapseTwo" aria-expanded="false"
+                            aria-controls="panelsStayOpen-collapseTwo">
+                            what is the difference between tailwind and bootstrap
+                        </button>
+                    </h2>
+                    <div id="panelsStayOpen-collapseTwo" class="accordion-collapse collapse"
+                        aria-labelledby="panelsStayOpen-headingTwo">
+                        <div class="accordion-body">
+                            Tailwind offers predesigned widgets to build a site from scratch with fast UI development. Bootstrap comes with a set of
+                            pre-styled responsive, mobile-first components that possess a definite UI kit. Tailwind CSS uses a set of utility
+                            classes to create a neat UI with more flexibility and uniqueness.</div>
+                    </div>
+                </div>
+                <div class="accordion-item">
+                    <h2 class="accordion-header" id="panelsStayOpen-headingThree">
+                        <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                            data-bs-target="#panelsStayOpen-collapseThree" aria-expanded="false"
+                            aria-controls="panelsStayOpen-collapseThree">
+                            What is css box model?
+                        </button>
+                    </h2>
+                    <div id="panelsStayOpen-collapseThree" class="accordion-collapse collapse"
+                        aria-labelledby="panelsStayOpen-headingThree">
+                        <div class="accordion-body">
+                            In CSS, the term "box model" is used when talking about design and layout.
+                            
+                            The CSS box model is essentially a box that wraps around every HTML element. It consists of: margins, borders, padding,
+                            and the actual content.</div>
+                    </div>
+                </div>
+                <div class="accordion-item">
+                    <h2 class="accordion-header" id="panelsStayOpen-headingThree">
+                        <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                            data-bs-target="#panelsStayOpen-collapseThree" aria-expanded="false"
+                            aria-controls="panelsStayOpen-collapseThree">
+                            What is the semantic tag in html?
+                        </button>
+                    </h2>
+                    <div id="panelsStayOpen-collapseThree" class="accordion-collapse collapse"
+                        aria-labelledby="panelsStayOpen-headingThree">
+                        <div class="accordion-body">
+                           <p>The HTML semantics refers to the tags that provide meaning to an HTML page rather than just presentation. It makes HTML
+                        more comprehensible by better defining the different sections and layout of web pages</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <!-- FAQ's section end -->
+    <!-- trusted comphany start -->
+    <section class="container my-5">
+        <div class="text-center my-3">
+            <h3>Trusted by Over 800+ Comoanies</h3>
+        </div>
+        <div class="text-center ">
+            <img class="me-4" src="edTech-website-main/images/company/company-1.png" alt="">
+            <img class="me-4" src="edTech-website-main/images/company/company-2.png" alt="">
+            <img class="me-4" src="edTech-website-main/images/company/company-3.png" alt="">
+            <img class="me-4" src="edTech-website-main/images/company/company-4.png" alt="">
+            <img class="me-4" src="edTech-website-main/images/company/company-5.png" alt="">
+            <img class="me-4" src="edTech-website-main/images/company/company-6.png" alt="">
+        </div>
+    </section>
+    <!-- trusted comphany end -->
+    <!-- footer start  -->
+    <section class=" container text-center bg-dark p-4">
+        <h5 class="text-white">Pro Edu</h5>
+        <p class="text-white">Office 41, zawaya building, chala muscut, <br> sultanute of oman. <br> Privacy policy|term of use. </p> 
+        <div class="d-flex justify-content-center text-white ">
+            <p class="me-2"><i class="fa-brands fa-facebook"></i></p>
+            <p class="me-2"><i class="fa-brands fa-linkedin"></i></p>
+            <p class="me-2"><i class="fa-brands fa-square-twitter"></i></p>
+            <p class="me-2"><i class="fa-brands fa-tiktok"></i></p>
+        </div>
+
+    </section>
+    <!-- footer end  -->
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa"
