--- a/index.html
+++ b/index.html
@@ -7,8 +7,11 @@
     <title>Bootstrap demo</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
+
+        <link rel="stylesheet" href="style.css">
         <!-- font awsome kit -->
         <script src="https://kit.fontawesome.com/457292320a.js" crossorigin="anonymous"></script>
+
 </head>
 
 <body>
@@ -111,7 +114,7 @@
     <!-- Heading section end -->
     <!-- Card section start -->
     <section class="container mt-5 ">
-        <div class="justify-content-between row gy-5 row-cols-2 ">
+        <div class="justify-content-between  gy-5 row row-cols-sm-1 row-cols-md-2 row-cols-lg-3 ">
             <div class="card" style="max-width: 500px;">
                 <div class="row g-0">
                     <div class="col-sm-5">
@@ -126,7 +129,7 @@
                     </div>
                 </div>
             </div>
-            <div class="card" style="max-width: 500px;">
+            <div class="card col-12 col-md-6" style="max-width: 500px;">
                 <div class="row g-0">
                     <div class="col-sm-5">
                         <img src="edTech-website-main/images/course/course-2.png" class="card-img-top h-100" alt="...">
@@ -140,7 +143,7 @@
                     </div>
                 </div>
             </div>
-            <div class="card" style="max-width: 500px;">
+            <div class="card col-12 col-md-6" style="max-width: 500px;">
                 <div class="row g-0">
                     <div class="col-sm-5">
                         <img src="edTech-website-main/images/course/course-3.png" class="card-img-top h-100" alt="...">
@@ -154,7 +157,7 @@
                     </div>
                 </div>
             </div>
-            <div class="card" style="max-width: 500px;">
+            <div class="card col-12 col-md-6" style="max-width: 500px;">
                 <div class="row g-0">
                     <div class="col-sm-5">
                         <img src="edTech-website-main/images/course/course-4.png" class="card-img-top h-100" alt="...">
@@ -168,7 +171,7 @@
                     </div>
                 </div>
             </div>
-            <div class="card" style="max-width: 500px;">
+            <div class="card col-12 col-md-6" style="max-width: 500px;">
                 <div class="row g-0">
                     <div class="col-sm-5">
                         <img src="edTech-website-main/images/course/course-5.png" class="card-img-top h-100" alt="...">
@@ -182,7 +185,7 @@
                     </div>
                 </div>
             </div>
-            <div class="card" style="max-width: 500px;">
+            <div class="card col-12 col-md-6" style="max-width: 500px;">
                 <div class="row g-0">
                     <div class="col-sm-5">
                         <img src="edTech-website-main/images/course/course-6.png" class="card-img-top h-100" alt="...">
@@ -204,12 +207,12 @@
     </div>
     <!-- Card section end -->
     <!-- course duration section start -->
-    <section class="container my-5">
-        <div class="d-flex text-center align-items-center h-50 w-75 bg-light ">
-            <div> 
+    <section class="container px-2 my-5">
+        <div class="row mx-auto text-center align-items-center h-50 bg-light ">
+            <div class="col-12 col-md-6 order-lg-2"> 
                 <img src="edTech-website-main/images/working.png" alt="">
             </div>
-            <div class="bg-light align-items-center " >
+            <div class="bg-light col-12 col-md-6 align-items-center order-lg-1" >
                 <h2>
                     Exploring the Elearning Institude
                 </h2>
@@ -240,13 +243,13 @@
 
     <!-- course duration end -->
     <!-- registration-box start -->
-    <section class="container d-flex align-items-center justify-content-between my-5 p-5 pe-5 bg-primary rounded ">
-        <div class="text-white">
+    <section class="container my-5 p-5 pe-5 bg-primary rounded ">
+        <div class="text-white col-12 col-md-8">
             <h3>Ready to join</h3>
             <p>Digital learning is any type of learning that  is accompanied <br> by technology or by  instructional  practice that makes <br>
             effective use of technology.</p>
         </div>
-        <div>
+        <div class="col-12 col-md-3">
             <button class="text-primary bg-white rounded border-0">Register Now</button>
         </div>
     </section>
@@ -259,23 +262,23 @@
             aforementioned concepts.</p>
         </div>
         <div class="row row-cols-4 gy-5">
-            <div class="shadow-sm p-3 mb-5 bg-body rounded">
-                <img src="edTech-website-main/images/student/student-1.png" alt="">
+            <div class="shadow-sm p-3 mb-5 bg-body rounded col-12 col-md-4 col-lg-3">
+                <img class="img-fluid" src="edTech-website-main/images/student/student-1.png" alt="">
                 <h5>Awlad Hossain</h5> 
                 <p>UI/UX Designer</p>
             </div>
-            <div class="shadow-sm p-3 mb-5 bg-body rounded">
-                <img src="edTech-website-main/images/student/student-2.png" alt="">
+            <div class="shadow-sm p-3 mb-5 bg-body rounded col-12 col-md-4 col-lg-3">
+                <img class="img-fluid" src="edTech-website-main/images/student/student-2.png" alt="">
                 <h5>Jannatul Ferduse</h5> 
                 <p>Motion Designer</p>
             </div>
-            <div class="shadow-sm p-3 mb-5 bg-body rounded">
-                <img src="edTech-website-main/images/student/student-3.png" alt="">
+            <div class="shadow-sm p-3 mb-5 bg-body rounded col-12 col-md-4 col-lg-3">
+                <img class="img-fluid" src="edTech-website-main/images/student/student-3.png" alt="">
                 <h5>Imran Hossain</h5> 
                 <p>graphics Designer</p>
             </div>
-            <div class="shadow-sm p-3 mb-5 bg-body rounded">
-                <img src="edTech-website-main/images/student/student-4.png" alt="">
+            <div class="shadow-sm p-3 mb-5 bg-body rounded col-12 col-md-4 col-lg-3">
+                <img class="img-fluid" src="edTech-website-main/images/student/student-4.png" alt="">
                 <h5>Nishi Akhter</h5> 
                 <p>Web Developer</p>
             </div>
@@ -291,8 +294,8 @@
             <h3>Some Students Feedback</h3>
             <p>Recognizing the student's effort even though  they missed <br> the concept of an assignment.</p>
         </div>
-        <div class="d-flex ">
-            <div class="shadow-sm p-3 mb-5 bg-body rounded">
+        <div class="row mx-auto d-flex justify-content-center">
+            <div class="shadow-sm p-3 mb-5 bg-body rounded col-12 col-md-4 col-lg-3">
                 <div class="d-flex justify-content-between">
                     <img src="edTech-website-main/images/comma.png" alt="">
                      <div class="d-flex">
@@ -306,14 +309,14 @@
                 <p>I appreciate the hard work you've put into this paper; however, I was hoping you would have included information on the
                 benefits of physical activity.</p>
                 <div class="d-flex">
-                    <img src="edTech-website-main/images/student/student-5.png" alt="">
+                    <img class="img-fluid" src="edTech-website-main/images/student/student-5.png" alt="">
                     <div class="ms-3">
                         <h5> Awlad Hossain </h5>
                         <p> UI designer</p>
                     </div>
                 </div>
             </div>
-            <div class="shadow-sm p-3 mb-5 bg-body rounded ms-3">
+            <div class="shadow-sm p-3 mb-5 bg-body rounded col-12 col-md-4 col-lg-3 ">
                 <div class="d-flex justify-content-between">
                     <img src="edTech-website-main/images/comma.png" alt="">
                      <div class="d-flex">
@@ -327,7 +330,7 @@
                 <p>I appreciate the hard work you've put into this paper; however, I was hoping you would have included information on the
                 benefits of physical activity.</p>
                 <div class="d-flex">
-                    <img src="edTech-website-main/images/student/student-6.png" alt="">
+                    <img class="img-fluid" src="edTech-website-main/images/student/student-6.png" alt="">
                     <div class="ms-3">
                         <h5>Shanta Akhter </h5>
                         <p> graphics designer</p>
@@ -416,7 +419,7 @@
     <!-- trusted comphany start -->
     <section class="container my-5">
         <div class="text-center my-3">
-            <h3>Trusted by Over 800+ Comoanies</h3>
+            <h3>Trusted by Over 800+ Companies</h3>
         </div>
         <div class="text-center ">
             <img class="me-4" src="edTech-website-main/images/company/company-1.png" alt="">
@@ -429,7 +432,7 @@
     </section>
     <!-- trusted comphany end -->
     <!-- footer start  -->
-    <section class=" container text-center bg-dark p-4">
+    <section class="container footer text-center bg-dark p-4">
         <h5 class="text-white">Pro Edu</h5>
         <p class="text-white">Office 41, zawaya building, chala muscut, <br> sultanute of oman. <br> Privacy policy|term of use. </p> 
         <div class="d-flex justify-content-center text-white ">
